# timber_framing_generator

./: .env  .env.example  .gitignore  .windsurfrules  CLAUDE.md  Dockerfile  README.md  SHEATHING_JUNCTION_PIPELINE_ANALYSIS.md  config.py  docker-compose.yml  generate_pr.py  gh-main.py  job_response.json  list_speckle_streams.py  pr_content.txt  project_structure.md  pyproject.toml  requirements-api.txt  requirements.txt  speckle_list_results.json  speckle_token.txt  speckle_walls.json  speckle_walls_11c81d7297.json  test_speckle_integration.py  test_speckle_rhino3dm.py  test_speckle_standalone.py  test_supabase.py  wall_data.json
.claude/: settings.local.json
PRPs/: 001--fix-geometry-conversion-bugs.md  001--rhinocommon-geometry-factory.md  002--timber-strategy-pattern.md  003--modular-ghpython-components.md  004--cfs-strategy-pattern.md  005--documentation-polish.md  006--connect-framing-generators.md  007--architecture-refactor-multi-component.md  008--plumbing-fixture-integration.md  PRP-009-wall-panelization.md  PRP-010-sheathing-geometry-converter.md  PRP-011--mep-routing-core-structures.md  PRP-012--mep-routing-target-heuristics.md  PRP-013--mep-routing-graph-construction.md  PRP-014--mep-routing-hanan-mst.md  PRP-015--mep-routing-astar-pathfinding.md  PRP-016--mep-routing-oahs-core.md  PRP-017--mep-routing-orchestrator.md  PRP-018--mep-routing-sanitary-postprocess.md  PRP-019--mep-routing-visualizer.md  PRP-020--mep-routing-penetrations.md  PRP-021--mep-routing-pipe-creator.md  PRP-022--mep-hierarchical-routing.md  PRP-023--wall-junction-analyzer.md  PRP-024--wall-assembly-layers.md  PRP-025--assembly-resolution-strategy.md  PRP-026--junction-geometry-fixes.md
api/: main.py
docs/: architecture.md  design_specification.md  usage.md
families/: manifest.json
logs/: gh-output_20260121_1207.txt  gh-output_20260121_1225.txt  gh-output_20260121_1232.txt  gh-output_20260121_1236.txt  gh-output_20260121_1241.txt  gh-output_20260121_1316.txt  gh-output_20260121_1335.txt  gh-output_20260121_1344.txt  gh-output_20260121_1435.txt  gh-output_20260121_1459.txt  gh-output_20260121_1508.txt  gh-output_20260121_1524.txt  gh-output_20260121_1552.txt  gh-output_20260121_1717.txt  gh-output_20260121_1724.txt  (+6 more)
src/: config.py  (+1 more)
(+298 files in other folders)
